fix overflows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,12 @@ body {
 
 .navbar {
     padding: 0;
+    margin: 0;
+    width: 100vw;
+}
+
+.navbar .container-fluid{
+    margin: 0;
 }
 
 .navbar-toggler {
@@ -72,9 +78,13 @@ body {
     background-color: var(--primary-color);
 }
 
+.offcanvas.offcanvas-end {
+    width: 100vw;
+}
+
 .offcanvas {
     transition: ease-in-out;
-    min-width: 100%;
+    
 }
 
 .offcanvas-header {
@@ -88,6 +98,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    width: 100vw;
 }
 
 .offcanvas-menu {
@@ -248,12 +259,12 @@ body {
 
 /* footer */
 
-footer {
+footer.container-fluid {
     min-height: 478px;
     /* display: flex; */
     /* flex-direction: column;
     align-items: center; */
-
+    margin: 0;
     font-size: 12px;
 }
 
@@ -281,6 +292,10 @@ footer a {
 
 .footer-contact {
     margin: 30px auto 20px;
+}
+
+.footer-contact h3 {
+    width: 15ch;
 }
 
 .footer-contact p {
@@ -331,8 +346,8 @@ footer a {
     .navbar>.container-fluid {
         justify-content: center;
         position:relative;
-        padding-top: 25px;
-        padding-bottom: 23px;
+        padding: 25px 0 23px;
+        width: 100%;
     }
 
     .navbar-brand {
